{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 19,
  "lineage": "a12ddada-9b54-52f2-13e0-7ca007fda2a8",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e58c389041b1f05",
            "domain": "vpc",
            "id": "eipalloc-07e58c389041b1f05",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-214-193-30.compute-1.amazonaws.com",
            "public_ip": "44.214.193.30",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447866558052:internet-gateway/igw-014ab5b3f3128af99",
            "id": "igw-014ab5b3f3128af99",
            "owner_id": "447866558052",
            "tags": {
              "Name": "projectvpc-IGW"
            },
            "tags_all": {
              "Name": "projectvpc-IGW"
            },
            "vpc_id": "vpc-053dd5b90069b4b10"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e58c389041b1f05",
            "connectivity_type": "public",
            "id": "nat-0e0b37b8ae906d3bf",
            "network_interface_id": "eni-02131e6e95be57cff",
            "private_ip": "10.0.2.39",
            "public_ip": "44.214.193.30",
            "subnet_id": "subnet-011d28bf8a5582622",
            "tags": {
              "Name": "public Route Table"
            },
            "tags_all": {
              "Name": "public Route Table"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447866558052:route-table/rtb-0d3758068db525c1e",
            "id": "rtb-0d3758068db525c1e",
            "owner_id": "447866558052",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e0b37b8ae906d3bf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private Route Table"
            },
            "tags_all": {
              "Name": "private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-053dd5b90069b4b10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447866558052:route-table/rtb-09529d20631492b01",
            "id": "rtb-09529d20631492b01",
            "owner_id": "447866558052",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014ab5b3f3128af99",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public Route Table"
            },
            "tags_all": {
              "Name": "public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-053dd5b90069b4b10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet-gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_asso",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4ae0c6ee9fcb762",
            "route_table_id": "rtb-0d3758068db525c1e",
            "subnet_id": "subnet-00919f53d8112aa2c"
          },
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c507500ff1fb6a5",
            "route_table_id": "rtb-0d3758068db525c1e",
            "subnet_id": "subnet-078311197d3e4ab76"
          },
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e62befe460ea901",
            "route_table_id": "rtb-0d3758068db525c1e",
            "subnet_id": "subnet-073b6bcb993c72394"
          },
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e035cabad9b20dde",
            "route_table_id": "rtb-09529d20631492b01",
            "subnet_id": "subnet-01bf9b60c0d20eb9a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet-gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f40880ae8d66cbf4",
            "route_table_id": "rtb-09529d20631492b01",
            "subnet_id": "subnet-011d28bf8a5582622"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet-gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd2afddc0def79fa",
            "route_table_id": "rtb-09529d20631492b01",
            "subnet_id": "subnet-02a16e26e8a9f8056"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet-gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447866558052:subnet/subnet-00919f53d8112aa2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00919f53d8112aa2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "447866558052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-053dd5b90069b4b10"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447866558052:subnet/subnet-078311197d3e4ab76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078311197d3e4ab76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "447866558052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-053dd5b90069b4b10"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447866558052:subnet/subnet-073b6bcb993c72394",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073b6bcb993c72394",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "447866558052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 3"
            },
            "tags_all": {
              "Name": "Private Subnet 3"
            },
            "vpc_id": "vpc-053dd5b90069b4b10"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447866558052:subnet/subnet-01bf9b60c0d20eb9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bf9b60c0d20eb9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "447866558052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-053dd5b90069b4b10"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447866558052:subnet/subnet-011d28bf8a5582622",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011d28bf8a5582622",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "447866558052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-053dd5b90069b4b10"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447866558052:subnet/subnet-02a16e26e8a9f8056",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a16e26e8a9f8056",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "447866558052",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 3"
            },
            "tags_all": {
              "Name": "Public Subnet 3"
            },
            "vpc_id": "vpc-053dd5b90069b4b10"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447866558052:vpc/vpc-053dd5b90069b4b10",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a4c0e7d5d8e1280e",
            "default_route_table_id": "rtb-0eb7a41d9bb7039f0",
            "default_security_group_id": "sg-07d60f5591b304bb8",
            "dhcp_options_id": "dopt-0ef473dedf2a0fd25",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-053dd5b90069b4b10",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb7a41d9bb7039f0",
            "owner_id": "447866558052",
            "tags": {
              "Name": "vpca"
            },
            "tags_all": {
              "Name": "vpca"
            }
          }
        }
      ]
    }
  ]
}